# raccoon-lib

./: .coveragerc  .docker-ignore  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CALIBRATION_GUIDE.md  CALIBRATION_QUICKSTART.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.cross  README.md  TESTING_DEBT.md  THREADING.md  build-cross-docker.sh  build-cross.sh  build.sh  defs.py  deploy.sh  dev.sh  dev_test.sh  docker-compose.yml  install.py  install.sh  main.cpp  mull.yml  pyproject.toml  review.md
modules/: CMakeLists.txt
modules/libstp-ahrs/: CMakeLists.txt
modules/libstp-arm/: CMakeLists.txt
modules/libstp-async/: CMakeLists.txt  README.md
modules/libstp-async/bindings/: bindings.cpp
modules/libstp-async/src/: algorithm.cpp
modules/libstp-autotune/: CMakeLists.txt
modules/libstp-autotune/bindings/: bindings.cpp
modules/libstp-autotune/src/: auto_tuner.cpp  bemf_velocity_tune.cpp  characterize_drive.cpp  encoder_calibrator.cpp  firmware_pid_tune.cpp  motion_tune.cpp  static_friction.cpp  tolerance_deriver.cpp  vel_lpf_tune.cpp  velocity_tune.cpp
modules/libstp-button/: CMakeLists.txt  README.md
modules/libstp-button/bindings/: bindings.cpp  button.cpp
modules/libstp-button/include/: button.hpp  button_wraper.hpp
modules/libstp-button/src/: button.cpp
modules/libstp-calibration/: CMakeLists.txt  README.md
modules/libstp-calibration-store/: CMakeLists.txt  README.md
modules/libstp-calibration-store/bindings/: bindings.cpp  calibration-store.cpp  calibration-type.cpp
modules/libstp-calibration-store/include/: CalibrationStore.hpp  CalibrationType.hpp
modules/libstp-calibration-store/src/: CalibrationStore.cpp
modules/libstp-calibration/bindings/: calibration.cpp
modules/libstp-calibration/src/: calibration.cpp  motion_calibration.cpp
modules/libstp-cam/: CMakeLists.txt
modules/libstp-cam/bindings/: bindings.cpp  cam_sensor_bindings.cpp
modules/libstp-cam/include/: CamSensor.hpp
modules/libstp-cam/src/: CamSensor.cpp
modules/libstp-datatype/: CMakeLists.txt
modules/libstp-datatype/bindings/: axis.cpp  bindings.cpp  conditions.cpp  functions.cpp  speed.cpp
modules/libstp-datatype/src/: conditions.cpp  functions.cpp  speed.cpp
modules/libstp-debug/: CMakeLists.txt  README.md
modules/libstp-device/: CMakeLists.txt
modules/libstp-device/bindings/: bindings.cpp  omni_wheeled.cpp  omni_wheeled_datatype.cpp  two_wheeled.cpp
modules/libstp-device/src/: device.cpp
modules/libstp-drive/: CMakeLists.txt  README.md
modules/libstp-drive/bindings/: bindings.cpp  drive.cpp  limits.cpp  motor_adapter.cpp  rate_limiter.cpp  velocity_controller.cpp
modules/libstp-drive/src/: drive.cpp  motor_adapter.cpp  rate_limiter.cpp  velocity_controller.cpp
modules/libstp-drives/: CMakeLists.txt
modules/libstp-drives/drive-base/: CMakeLists.txt
modules/libstp-drives/mechanum-drive/: CMakeLists.txt
modules/libstp-drives/tank-drive/: CMakeLists.txt
modules/libstp-foundation/: CMakeLists.txt  README.md
modules/libstp-foundation/bindings/: bindings.cpp  logging.cpp  motor.cpp  pid.cpp  speed_mode.cpp  transport.cpp  types.cpp
modules/libstp-foundation/src/: chassis_control_context.cpp  logging.cpp  math.cpp  pid.cpp  speed_mode_context.cpp
modules/libstp-hal/: CMakeLists.txt  README.md
modules/libstp-hal/bindings/: analog.cpp  bindings.cpp  digital.cpp  heartbeat.cpp  imu.cpp  motor.cpp  odometry.cpp  odometry_bridge.cpp  platform.cpp  servo.cpp
modules/libstp-hal/src/: Analog.cpp  Digital.cpp  Motor.cpp  Platform.cpp  Servo.cpp
modules/libstp-kinematics/: CMakeLists.txt  README.md
modules/libstp-kinematics/bindings/: bindings.cpp
modules/libstp-kinematics/models/: CMakeLists.txt
modules/libstp-kinematics/src/: dummy.cpp  kinematics.cpp
modules/libstp-kmeans/: CMakeLists.txt  README.md
modules/libstp-kmeans/bindings/: bindings.cpp
modules/libstp-kmeans/include/: Kmeans.hpp
modules/libstp-kmeans/src/: Kmeans.cpp
modules/libstp-localization/: CMakeLists.txt  README.md
modules/libstp-localization/bindings/: bindings.cpp
modules/libstp-localization/docs/: recording-format.md
modules/libstp-localization/src/: localization.cpp  recorder.cpp
modules/libstp-map/: CMakeLists.txt
modules/libstp-map/bindings/: map.cpp
modules/libstp-map/src/: WorldMap.cpp
modules/libstp-mission/: CMakeLists.txt  README.md
modules/libstp-motion/: CMakeLists.txt  README.md
modules/libstp-motion/bindings/: arc_motion.cpp  bindings.cpp  diagonal_motion.cpp  directional_line_follow_motion.cpp  drive_straight_motion.cpp  linear_motion.cpp  motion.cpp  move_to_pose_motion.cpp  spline_motion.cpp  strafe_motion.cpp  turn_motion.cpp
modules/libstp-motion/src/: arc_motion.cpp  diagonal_motion.cpp  differential_drive.cpp  directional_line_follow_motion.cpp  drive_straight_motion.cpp  linear_motion.cpp  motion_pid.cpp  move_to_pose_motion.cpp  spline_motion.cpp  strafe_motion.cpp  turn_motion.cpp
modules/libstp-odometry/: CMakeLists.txt  README.md
modules/libstp-odometry/bindings/: bindings.cpp
modules/libstp-odometry/models/: CMakeLists.txt
modules/libstp-odometry/src/: dummy.cpp
modules/libstp-platforms/: CMakeLists.txt  README.md
modules/libstp-platforms/mock/: CMakeLists.txt  README.md
modules/libstp-platforms/wombat/: CMakeLists.txt  README.md
modules/libstp-robot/: CMakeLists.txt  README.md
modules/libstp-screen/: CMakeLists.txt  README.md
modules/libstp-sensor-et/: CMakeLists.txt
modules/libstp-sensor-et/bindings/: bindings.cpp  et_sensor_bindings.cpp
modules/libstp-sensor-et/include/: ETSensor.hpp
modules/libstp-sensor-ir/: CMakeLists.txt  README.md
modules/libstp-sensors/: CMakeLists.txt
modules/libstp-servo/: CMakeLists.txt  README.md
modules/libstp-sim/: CMakeLists.txt
modules/libstp-step/: CMakeLists.txt  README.md
modules/libstp-testing/: CMakeLists.txt
modules/libstp-threading/: CMakeLists.txt  README.md
modules/libstp-timing/: CMakeLists.txt  README.md
modules/libstp-transport-core/: CMakeLists.txt
tests/cpp/: CMakeLists.txt
(+959 files in other folders)
